<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="language_preference"
        android:title="@string/preferences_language"
        android:summary="@string/select_language"
        android:entries="@array/language_entries"
        android:entryValues="@array/language_values"
        android:icon="@drawable/ic_language"
        android:iconTint="?attr/iconTint"
        android:defaultValue="es"/>


    <ListPreference
        android:key="theme_preference"
        android:title="@string/preferences_theme"
        android:summary="@string/select_theme"
        android:entries="@array/theme_entries"
        android:entryValues="@array/theme_values"
        android:icon="@drawable/ic_settings_theme"
        android:fillColor="?attr/iconTint"
        android:defaultValue="system"/>

    <Preference
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_delete"
        android:key="delete_account"
        android:summary="@string/delete_account_summary"
        android:title="@string/delete_account" />

</PreferenceScreen>
