<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DestinoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/sub_service_list_view_cont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp"

            android:scrollbarSize="0dp"
            android:scrollbars="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="@dimen/carousel_item_height"
                app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager" />
        </RelativeLayout>

        <Button
            android:id="@+id/buttonVisitado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawableStart="@drawable/ic_not_checked"
            android:text="@string/visited_button_dest"
            android:textColor="?android:attr/textColorPrimary"
            app:icon="@drawable/ic_not_checked"
            app:iconGravity="start"
            app:iconSize="24dp"
            app:iconTint="?attr/iconTint"
            app:layout_constraintEnd_toStartOf="@+id/buttonProfileVisitados"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sub_service_list_view_cont" />


        <Button
            android:id="@+id/buttonComentarios"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/comments_button_dest"
            android:textColor="?android:attr/textColorPrimary"
            app:icon="@drawable/ic_comments"
            app:iconGravity="start"
            app:iconSize="24dp"
            app:iconTint="?attr/iconTint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerActividades" />

        <Button
            android:id="@+id/buttonProfileVisitados"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/favorit_button_dest"
            android:textColor="?android:attr/textColorPrimary"
            app:iconTint="?attr/iconTint"
            app:icon="@drawable/ic_heart"
            app:iconSize="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonVisitado"
            app:layout_constraintTop_toBottomOf="@+id/sub_service_list_view_cont" />

        <LinearLayout
            android:id="@+id/descriptionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonProfileVisitados">

            <Button
                android:id="@+id/toggleDescriptionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="@string/show_description"
                android:textColor="?android:attr/textColorPrimary"
                app:icon="@drawable/ic_arrow_dropdown"
                app:iconGravity="end"
                app:iconSize="36dp"
                app:iconTint="?attr/iconTint" />

            <LinearLayout
                android:id="@+id/descriptionContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="Description of a Destination"
                    android:textColor="?android:attr/textColorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonProfileVisitados" />

            </LinearLayout>


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:itemCount="1"
            tools:listitem="@layout/item_info_destino" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerActividades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textActividadesList"
            tools:itemCount="1"
            tools:listitem="@layout/item_actividad" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/general_data"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionContainer" />

        <TextView
            android:id="@+id/textActividadesList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/activities_dest"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerInfo" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>